# salamoonder-py

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  salamoonder.py
examples/: akamai_sbsd.py  akamai_web.py
salamoonder/: __init__.py  client.py  tasks.py
salamoonder/utils/: __init__.py  akamai.py  datadome.py  kasada.py
